@@ -67,6 +67,9 @@ Stop (exit) at the end of the log / stream.
 \fB\-\-loop\fR
 Loop back to the start of the log when the end is reached.
 .TP
+\fB\-\-loop\-delay\-seconds SECONDS\fR
+Seconds to delay before looping.
+.TP
 \fB\-a, \-\-auto\-skip\-seconds SECONDS\fR
 Automatically skip to next entry if nothing happens for a specified number of seconds.
 .TP
